--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,6 @@ div.project {
   max-width: 960px;
   height: 470px;
   position: absolute;
-  z-index: -1;
   top: 0;
   left: 0;
   opacity: 1;
